--- a/SceneLoader/SceneLoader.vcxproj.filters
+++ b/SceneLoader/SceneLoader.vcxproj.filters
@@ -8,10 +8,34 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Class1.cpp" />
+    <ClCompile Include="Bounds3D.cpp" />
+    <ClCompile Include="GLTFLoader.cpp" />
+    <ClCompile Include="GLTFResourceSet.cpp" />
+    <ClCompile Include="GLTFVisitor.cpp" />
+    <ClCompile Include="GLTFVisitor_Camera.cpp" />
+    <ClCompile Include="GLTFVisitor_Image.cpp" />
+    <ClCompile Include="GLTFVisitor_Material.cpp" />
+    <ClCompile Include="GLTFVisitor_Mesh.cpp" />
+    <ClCompile Include="GLTFVisitor_MeshPrimitive.cpp" />
+    <ClCompile Include="GLTFVisitor_Node.cpp" />
+    <ClCompile Include="GLTFVisitor_Sampler.cpp" />
+    <ClCompile Include="GLTFVisitor_Skin.cpp" />
+    <ClCompile Include="GLTFVisitor_Texture.cpp" />
+    <ClCompile Include="UtilForIntermingledNamespaces.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Class1.h" />
+    <ClInclude Include="Bounds3D.h" />
+    <ClInclude Include="GLTFLoader.h" />
+    <ClInclude Include="GLTFResourceSet.h" />
+    <ClInclude Include="GLTFVisitor.h" />
+    <ClInclude Include="UtilForIntermingledNamespaces.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+    <None Include="GLTFLoaderComponent.def" />
+  </ItemGroup>
+  <ItemGroup>
+    <Midl Include="GLTFLoaderComponent.idl" />
   </ItemGroup>
 </Project>
