changed file names and variables

--- a/SceneLoader/SceneLoader.vcxproj.filters
+++ b/SceneLoader/SceneLoader.vcxproj.filters
@@ -9,33 +9,34 @@
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Bounds3D.cpp" />
-    <ClCompile Include="GLTFLoader.cpp" />
-    <ClCompile Include="GLTFResourceSet.cpp" />
-    <ClCompile Include="GLTFVisitor.cpp" />
-    <ClCompile Include="GLTFVisitor_Camera.cpp" />
-    <ClCompile Include="GLTFVisitor_Image.cpp" />
-    <ClCompile Include="GLTFVisitor_Material.cpp" />
-    <ClCompile Include="GLTFVisitor_Mesh.cpp" />
-    <ClCompile Include="GLTFVisitor_MeshPrimitive.cpp" />
-    <ClCompile Include="GLTFVisitor_Node.cpp" />
+    <ClCompile Include="UtilForIntermingledNamespaces.cpp" />
+    <ClCompile Include="SceneLoader.cpp" />
+    <ClCompile Include="SceneVisitor_MeshPrimitive.cpp" />
+    <ClCompile Include="SceneResourceSet.cpp" />
     <ClCompile Include="GLTFVisitor_Sampler.cpp" />
     <ClCompile Include="GLTFVisitor_Skin.cpp" />
     <ClCompile Include="GLTFVisitor_Texture.cpp" />
-    <ClCompile Include="UtilForIntermingledNamespaces.cpp" />
+    <ClCompile Include="GLTFVisitor.cpp" />
+    <ClCompile Include="GLTFVisitor_Camera.cpp" />
+    <ClCompile Include="GLTFVisitor_Material.cpp" />
+    <ClCompile Include="GLTFVisitor_Mesh.cpp" />
+    <ClCompile Include="GLTFVisitor_Node.cpp" />
+    <ClCompile Include="GLTFVisitor_Image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Bounds3D.h" />
-    <ClInclude Include="GLTFLoader.h" />
-    <ClInclude Include="GLTFResourceSet.h" />
-    <ClInclude Include="GLTFVisitor.h" />
     <ClInclude Include="UtilForIntermingledNamespaces.h" />
+    <ClInclude Include="SceneLoader.h" />
+    <ClInclude Include="SceneResourceSet.h" />
+    <ClInclude Include="GLTFVisitor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="GLTFLoaderComponent.def" />
+    <None Include="SceneLoaderComponent.def" />
+    <None Include="SceneLoaderComponent.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="GLTFLoaderComponent.idl" />
+    <Midl Include="SceneLoaderComponent.idl" />
   </ItemGroup>
 </Project>
