--- a/SceneLoader/SceneLoader.vcxproj
+++ b/SceneLoader/SceneLoader.vcxproj
@@ -270,22 +270,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Bounds3D.h" />
-    <ClInclude Include="GLTFLoader.h" />
-    <ClInclude Include="GLTFResourceSet.h" />
+    <ClInclude Include="SceneLoader.h" />
+    <ClInclude Include="SceneResourceSet.h" />
     <ClInclude Include="GLTFVisitor.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="UtilForIntermingledNamespaces.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bounds3D.cpp" />
-    <ClCompile Include="GLTFLoader.cpp" />
-    <ClCompile Include="GLTFResourceSet.cpp" />
+    <ClCompile Include="SceneLoader.cpp" />
+    <ClCompile Include="SceneResourceSet.cpp" />
     <ClCompile Include="GLTFVisitor.cpp" />
     <ClCompile Include="GLTFVisitor_Camera.cpp" />
     <ClCompile Include="GLTFVisitor_Image.cpp" />
     <ClCompile Include="GLTFVisitor_Material.cpp" />
     <ClCompile Include="GLTFVisitor_Mesh.cpp" />
-    <ClCompile Include="GLTFVisitor_MeshPrimitive.cpp" />
+    <ClCompile Include="SceneVisitor_MeshPrimitive.cpp" />
     <ClCompile Include="GLTFVisitor_Node.cpp" />
     <ClCompile Include="GLTFVisitor_Sampler.cpp" />
     <ClCompile Include="GLTFVisitor_Skin.cpp" />
@@ -303,11 +303,12 @@
     <ClCompile Include="UtilForIntermingledNamespaces.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="GLTFLoaderComponent.def" />
+    <None Include="SceneLoaderComponent.nuspec" />
+    <None Include="SceneLoaderComponent.def" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="GLTFLoaderComponent.idl" />
+    <Midl Include="SceneLoaderComponent.idl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
