--- a/SceneLoader/SceneLoader.vcxproj.filters
+++ b/SceneLoader/SceneLoader.vcxproj.filters
@@ -11,7 +11,6 @@
     <ClCompile Include="Bounds3D.cpp" />
     <ClCompile Include="UtilForIntermingledNamespaces.cpp" />
     <ClCompile Include="SceneLoader.cpp" />
-    <ClCompile Include="SceneVisitor_MeshPrimitive.cpp" />
     <ClCompile Include="SceneResourceSet.cpp" />
     <ClCompile Include="GLTFVisitor_Sampler.cpp" />
     <ClCompile Include="GLTFVisitor_Skin.cpp" />
@@ -22,6 +21,8 @@
     <ClCompile Include="GLTFVisitor_Mesh.cpp" />
     <ClCompile Include="GLTFVisitor_Node.cpp" />
     <ClCompile Include="GLTFVisitor_Image.cpp" />
+    <ClCompile Include="Generated Files\module.g.cpp" />
+    <ClCompile Include="GLTFVisitor_MeshPrimitive.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
