--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ steps:
   displayName: Insider SDK
 
 # Run cake build
-- powershell: .\build.ps1 -target=Package
+- powershell: .\build.ps1 -target=PackageNuget
   displayName: Build
   workingDirectory: .\build
 
