--- a/SceneLoader/NugetPackager/SceneLoaderComponent.nuspec
+++ b/SceneLoader/NugetPackager/SceneLoaderComponent.nuspec
@@ -13,20 +13,33 @@
   </metadata>
 
   <files>
-    <!-- WinMd and IntelliSense files -->
-    <file src="..\..\Release\SceneLoader\SceneLoaderComponent.winmd" target="lib\uap10.0"/>
-    <file src="..\..\Release\SceneLoader\SceneLoaderComponent.xml" target="lib\uap10.0"/>
-
-    <!-- DLLs and resources -->
-    <file src="..\..\ARM\Release\SceneLoader\SceneLoaderComponent.dll" target="runtimes\win10-arm\native"/>
-    <file src="..\..\ARM\Release\SceneLoader\SceneLoaderComponent.pri" target="runtimes\win10-arm\native"/>
-    <file src="..\..\x64\Release\SceneLoader\SceneLoaderComponent.dll" target="runtimes\win10-x64\native"/>
-    <file src="..\..\x64\Release\SceneLoader\SceneLoaderComponent.pri" target="runtimes\win10-x64\native"/>
-    <file src="..\..\Release\SceneLoader\SceneLoaderComponent.dll" target="runtimes\win10-x86\native"/>
-    <file src="..\..\Release\SceneLoader\SceneLoaderComponent.pri" target="runtimes\win10-x86\native"/>
-
     <!-- .targets -->
     <file src="SceneLoaderComponent.targets" target="build\native"/>
     <file src="SceneLoaderComponent.props" target="build\native"/>
+    <file src="SceneLoaderComponent.targets" target="build\net472"/>
+    <file src="SceneLoaderComponent.props" target="build\net472"/>
+
+    <!-- DLLs and resources -->
+    <file src="..\..\ARM\Release\SceneLoader\*.dll" target="runtimes\win10-arm\native"/>
+    <file src="..\..\ARM\Release\SceneLoader\*.pri" target="runtimes\win10-arm\native"/>
+    <file src="..\..\ARM\Release\SceneLoader\*.winmd" target="runtimes\win10-arm\lib\uap10.0"/>
+    <file src="..\..\ARM\Release\SceneLoader\*.xml" target="runtimes\win10-arm\lib\uap10.0"/>
+    <file src="..\..\ARM\Release\SceneLoader\*.dll" target="runtimes\win10-arm\lib\net472"/>
+    <file src="..\..\ARM\Release\SceneLoader\*.pri" target="runtimes\win10-arm\lib\net472"/>
+
+    <file src="..\..\x64\Release\SceneLoader\*.dll" target="runtimes\win10-x64\native"/>
+    <file src="..\..\x64\Release\SceneLoader\*.pri" target="runtimes\win10-x64\native"/>
+    <file src="..\..\x64\Release\SceneLoader\*.winmd" target="runtimes\win10-x64\lib\uap10.0"/>
+    <file src="..\..\x64\Release\SceneLoader\*.xml" target="runtimes\win10-x64\lib\uap10.0"/>
+    <file src="..\..\x64\Release\SceneLoader\*.dll" target="runtimes\win10-x64\lib\net472"/>
+    <file src="..\..\x64\Release\SceneLoader\*.pri" target="runtimes\win10-x64\lib\net472"/>
+
+    <file src="..\..\Release\SceneLoader\*.dll" target="runtimes\win10-x86\native"/>
+    <file src="..\..\Release\SceneLoader\*.pri" target="runtimes\win10-x86\native"/>
+    <file src="..\..\Release\SceneLoader\*.winmd" target="runtimes\win10-x86\lib\uap10.0"/>
+    <file src="..\..\Release\SceneLoader\*.xml" target="runtimes\win10-x86\lib\uap10.0"/>
+    <file src="..\..\Release\SceneLoader\*.dll" target="runtimes\win10-x86\lib\net472"/>
+    <file src="..\..\Release\SceneLoader\*.pri" target="runtimes\win10-x86\lib\net472"/>
+
   </files>
 </package>
