--- a/Samples/UWPWithSceneLoaderNuget/UWPWithSceneLoaderNuget.csproj
+++ b/Samples/UWPWithSceneLoaderNuget/UWPWithSceneLoaderNuget.csproj
@@ -158,7 +158,7 @@
       <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="SceneLoaderComponent">
-      <Version>1.0.0</Version>
+      <Version>1.0.0-build.8.4cb2711db6</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
