--- a/TestViewer/TestViewer.csproj
+++ b/TestViewer/TestViewer.csproj
@@ -133,9 +133,14 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\OrientationTest.gltf" />
+    <Content Include="Assets\cam.gltf" />
+    <Content Include="Assets\video_cam.gltf" />
+    <Content Include="Assets\video_cam_data.bin" />
     <None Include="TestViewer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\video_cam_img0.png" />
+    <Content Include="Assets\video_cam_img1.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
