added header, new interface that defines animation signatures, reworked Viewport's constructor and how it handles taking in a Visual, and added some error handling

--- a/Experimental/CameraComponent/CameraComponent.csproj
+++ b/Experimental/CameraComponent/CameraComponent.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="FirstPersonCamera.cs" />
+    <Compile Include="Animatable.cs" />
     <Compile Include="OrbitalCamera.cs" />
     <Compile Include="OrthographicProjection.cs" />
     <Compile Include="PerspectiveProjection.cs" />
