added target to get build.bat to run correctly, should fix azure pipeline error

--- a/Experimental/CameraComponent/CameraComponent.csproj
+++ b/Experimental/CameraComponent/CameraComponent.csproj
@@ -140,6 +140,9 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+  <Target Name="Pack">
+ <!-- Dummy target to mute warnings about attempts to create a NuPkg -->
+ </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
