--- a/TestViewer/TestViewer.csproj
+++ b/TestViewer/TestViewer.csproj
@@ -132,6 +132,9 @@
     <Content Include="Assets\DamagedHelmet.gltf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\DamagedHelmet.glb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="TestViewer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
